--- a/source/order_confirmation.html
+++ b/source/order_confirmation.html
@@ -40,20 +40,20 @@
                     <li class="nav-item">
                       <a class="nav-link" href="../index.html">Home</a>
                     </li>
-                    <li class="nav-item dropdown active">
-                      <a class="nav-link dropdown-toggle" style="color: #c0ff59;" href="http://example.com" id="dropdown07"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
-                      <div class="dropdown-menu" aria-labelledby="dropdown07">
-                        <a class="dropdown-item" href="../gun_nails.html">Gun Nails</a>
-                        <a class="dropdown-item" href="../fixings.html">Fixings</a>
-                        <a class="dropdown-item" href="../brad_nails.html">Brad Nails</a>
-                        <a class="dropdown-item" href="../building_seal.html">Building Seal</a>
-                        <a class="dropdown-item" href="../marker_paint.html">Marker Paint</a>
-                      </div>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="../order.html">Cart</a>
-                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07"
+                          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown07">
+                          <a class="dropdown-item" href="../gun_nails.html">Gun Nails</a>
+                          <a class="dropdown-item" href="../fixings.html">Fixings</a>
+                          <a class="dropdown-item" href="../brad_nails.html">Brad Nails</a>
+                          <a class="dropdown-item" href="../building_seal.html">Building Seal</a>
+                          <a class="dropdown-item" href="../marker_paint.html">Marker Paint</a>
+                        </div>
+                      </li>
+                      <li class="nav-item active">
+                        <a class="nav-link"  style="color: #c0ff59;" href="../order.html">Cart</a>
+                      </li>
                   </ul>
                   <!--<form class="form-inline my-2 my-md-0">
                           <input class="form-control" type="text" placeholder="Search" aria-label="Search">
