--- a/source/submit.html
+++ b/source/submit.html
@@ -40,10 +40,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="../index.html">Home</a>
                             </li>
-                            <li class="nav-item dropdown active">
-                                <a class="nav-link dropdown-toggle" style="color: #c0ff59;" href="http://example.com"
-                                    id="dropdown07" data-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false">Products</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
                                 <div class="dropdown-menu" aria-labelledby="dropdown07">
                                     <a class="dropdown-item" href="../gun_nails.html">Gun Nails</a>
                                     <a class="dropdown-item" href="../fixings.html">Fixings</a>
@@ -52,8 +51,8 @@
                                     <a class="dropdown-item" href="../marker_paint.html">Marker Paint</a>
                                 </div>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="../order.html">Cart</a>
+                            <li class="nav-item active">
+                                <a class="nav-link" style="color: #c0ff59;" href="../order.html">Cart</a>
                             </li>
                         </ul>
                         <!--<form class="form-inline my-2 my-md-0">
